<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:padding="20dp">

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/txt_luu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/hint_ten"
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/btnOk"
        android:text="@string/txt_ok"
        android:background="@drawable/bg_button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>