<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:padding="20dp">

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="22sp"
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/txt_giatriphanthuong"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorGold"
        android:id="@+id/tvFinishCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="Cảm ơn bạn đã đến tham gia chương trình. Chúc bạn thành công trong cuộc sống"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnOk"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/txt_ok"
            android:background="@drawable/bg_button_ok"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginLeft="20dp"
            android:id="@+id/btnSave"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/txt_luudiem"
            android:background="@drawable/bg_button_ok"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>