<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/txt_huongdan"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitlle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginTop="20dp"
            android:text="@string/txt_huongdan1"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitlle1"
            android:layout_marginTop="10dp"
            android:text="@string/txt_huongdan2"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/ll5050"
            android:layout_below="@id/tvTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle2"
                android:src="@drawable/ic_help_5050" />

            <TextView
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_5050" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/llAudience"
            android:layout_below="@id/ll5050"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle2"
                android:src="@drawable/ic_help_5050" />

            <TextView
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_5050" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/llCall"
            android:layout_below="@id/llAudience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle2"
                android:src="@drawable/ic_help_5050" />

            <TextView
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_5050" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/llStop"
            android:layout_below="@id/llCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle2"
                android:src="@drawable/ic_help_5050" />

            <TextView
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_5050" />
        </LinearLayout>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llStop"
            android:layout_margin="30dp"
            android:background="@drawable/bg_button_ok"
            android:text="@string/txt_ok" />
    </RelativeLayout>
</ScrollView>